<resources>
    <string name="app_name">My IMAD Assignment 2</string>
    <string name="welcome_buddy_this_is_a_history_flash_card_game_that_displays_true_or_false_questions_based_on_modern_history_lets_test_your_knowledge">WELCOME Buddy !! This is a History Flash card game that displays (true or false) questions based on Modern History. LETS TEST YOUR KNOWLEDGE..</string>
    <string name="start">START!</string>
    <string name="true_or_false_nelson_mandela_was_imprisoned_in_alcatraz_prison_in_1956">True or False , Nelson Mandela was imprisoned in Alcatraz prison in 1956.</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="true_or_false_the_colosseum_is_an_elliptical_amphitheatre_in_the_centre_of_the_city_of_rome_italy_and_was_completed_in_ad_80">TRUE OR FALSE , The Colosseum is an elliptical amphitheatre in the centre of the city of Rome, Italy and was completed in AD 80.</string>
    <string name="true_or_false_the_colosseum_is_an_elliptical_amphitheatre_in_the_centre_of_the_city_of_rome_italy">"The colleseum "</string>
    <string name="true_or_false_the_colosseum_is_an_elliptical_mphitheatre_in_the_centre_of_the_city_of_rome_italy">The Colosseum  is an elliptical amphitheatre in the centre of the city of Rome, Italy, just east of the Roman Forum</string>
    <string name="true_or_false_the_colosseum_is_an_elliptical_aamphitheatre_in_the_centre_of_the_city_of_rome_italy">TRE OR FALSE , The Colosseum  is an elliptical amphitheatre in the centre of the city of Rome, Italy, just east of the Roman Forum.</string>
    <string name="true_or_false_the_colosseum_is_an_elliptical_amphitheatre_in_the_centre_of_the_city_of_rome_italymphitheatre_in_the_centre_of_the_city_of_rome_italy">TRUE OR FALSE , The Colosseum is an elliptical amphitheatre in the centre of the city of Rome , Italy ,just east of the Roman Forum.</string>
    <string name="apartheid_was_a_system_of_institutionalised_racial_segregation_that_existed_in_south_africa_and_south_west_africa_from_1948_to_the_early_1990s">Apartheid was a system of institutionalised racial segregation that existed in South Africa and South West Africa from 1948 to the early 1990s.</string>
    <string name="next_question">Next Question</string>
    <string name="the_second_man_to_walk_on_the_moon_in_1969_was_mark_shuttleworth">The second man to walk on the moon in 1969 was Mark Shuttleworth.</string>
    <string name="todo">TODO</string>
    <string name="true_or_false_world_war_ii_from_1939_1945_was_also_known_as_the_cold_war">TRUE OR FALSE , World War II from 1939 - 1945 was also known as the Cold War</string>
    <string name="todo1">TODO</string>
    <string name="final_score">Final Score</string>
    <string name="score">SCORE :</string>
    <string name="incorrect_answer_message">Incorrect</string>
    <string name="correct_answer_message">Correct</string>
</resources>